[package]
name = "tcx"
version = "0.1.0"
edition = "2021"
authors = ["Peter Wieland <peter@die-wielands.net>"]
description = "Simple TCX file parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

minidom = "*"
clap = { version = "4.*", features = ["derive"] }
chrono = "*"
tcx_macro_derive = { path = "tcx_macro_derive" }
